--- a/calender.html
+++ b/calender.html
@@ -64,9 +64,9 @@
               ><span class="week">S</span>
               </div>
               <div class="week1">
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
               <div class="a">01</div>
               <div class="a">02</div>
               <div class="a">03</div>
@@ -108,9 +108,9 @@
               ><span class="week">S</span>
             </div>
             <div class="week1">
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
               <div class="a">01</div>
               <div class="a">02</div>
               <div class="a">03</div>
@@ -154,12 +154,12 @@
               ><span class="week">S</span>
             </div>
             <div class="week1">
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
               <div class="a">01</div>
               <div class="a">02</div>
               <div class="a">03</div>
@@ -247,10 +247,10 @@
               ><span class="week">S</span>
             </div>
             <div class="week1">
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
               <div class="a">01</div>
               <div class="a">02</div>
               <div class="a">03</div>
@@ -292,12 +292,12 @@
               ><span class="week">S</span>
             </div>
             <div class="week1">
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
               <div class="a">01</div>
               <div class="a">02</div>
               <div class="a">03</div>
@@ -340,8 +340,8 @@
               ><span class="week">S</span>
             </div>
             <div class="week1">
-              <div class="a"  style="color:pink;">00</div>
-              <div class="a"  style="color:pink;">00</div>
+              <div class="a"  style="color:pink; visibility: hidden;">00</div>
+              <div class="a"  style="color:pink; visibility: hidden;">00</div>
               <div class="a">01</div>
               <div class="a">02</div>
               <div class="a">03</div>
@@ -386,11 +386,11 @@
               ><span class="week">S</span>
             </div>
             <div class="week1">
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
               <div class="a">01</div>
               <div class="a">02</div>
               <div class="a">03</div>
@@ -474,9 +474,9 @@
               ><span class="week">S</span>
             </div>
             <div class="week1">
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
               <div class="a">01</div>
               <div class="a">02</div>
               <div class="a">03</div>
@@ -518,11 +518,11 @@
               ><span class="week">S</span>
             </div>
             <div class="week1">
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
-              <div class="a" style="color:pink;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
+              <div class="a" style="color:pink; visibility: hidden;">00</div>
               <div class="a">01</div>
               <div class="a">02</div>
               <div class="a">03</div>
